src/test/deca/syntax/valid/class/12_list_decl_champ.deca
/*
	Description: decl une list de champs

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	protected int x=23, y= 123, z ;
}
