src/test/deca/syntax/invalid/class/class_name_with_number.deca
/*
	Description: nom de class avec des nombres


	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class 123 extends b{
	

	protected void hello( ){
		print("hello");
	}
	
}
